--- a/views/results.erb
+++ b/views/results.erb
@@ -12,7 +12,7 @@
     <% @results.each do |result| %>
       <tr>
         <td><%= result.title %></td>
-        <td><a href="<%=url "/?query=#{CGI::escape(result.artist)}&kind=artist"%>"><%= result.artist %></a></td>
+        <td><a href="<%=url "/?query=#{CGI::escape(result.artist)}"%>"><%= result.artist %></a></td>
         <td><%= result.utaidashi %></td>
         <td><b><%= result.number %></b></td>
         <td>
