--- a/views/index.erb
+++ b/views/index.erb
@@ -1,58 +1,27 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Joysound</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-        <script src="<%= url "/site.js" %>"></script>
-<style type="text/css">
-        tr.even td,tr:nth-child(even) {background:#e5ecf9;}
-        table{width:100%;}
-        tr {width: 100%;}
-        td {width: 20%;}
-
-        #title {
-          width:70%;
-          float:left;
-        }
-
-        #user {
-          text-align: right;
-          width: 25%;
-          float:right;
-        }
-
-        #main {
-          clear:both;
-        }
-        #message {
-          display: none;
-        }
-
-</style>
-  </head>
-
-  <body>
-    <div id="title">
-      <h1>Joysound-Suche</h1 >
-    </div>
-    <div id="user">
-    <% if logged_in? %>
-      <h4><%=  current_user.email%></h4>
-      <form method="post" action="<%= url '/user/logout' %>">
-        <button>Abmelden</button>
-      </form>
-    <% else %>
-      <p>
-        <a href='<%= url "/user/new" %>'>Anmelden</a>
-      </p>
-    <% end %>
-    </div>
-    <div id="main">
       <p>
         <form onsubmit="return osterhase(this)" action="<%= url '/' %>" method="get">
           <input id="query" name="query" value="<%= params[:query] %>"/>
           <button>Suchen!</button>
         </form>
+        <div class="row-fluid">
+        <% @genre_list.each do |all_genre|%>
+          <div class="span3"> 
+            <% main_genre = all_genre[0]%>
+            <p class="MainGenre">
+            <% link = "/search/#{CGI::escape(main_genre)}"%>
+            <a href="<%= url link%>"><%= main_genre %></a>
+            </p>
+            <ul>
+              <% 1.upto(all_genre.length - 1).each do |num|%>
+                <% link = "search/#{CGI::escape(main_genre + "/" + all_genre[num])}" %>
+                <li class="SubGenre">
+                <a href="<%= url link%>"><%= all_genre[num] %></a>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+       </div>
       <div id="results">
         <% if @results %>
           <%= erb :results %>
@@ -63,15 +32,3 @@
           <%= erb :remembered %>
         <% end %>
       </div>
-    </div>
-
-<script type="text/javascript">
-  query = "<%= params[:query] %>";
-  kind = "<%= params[:kind] %>";
-  setTimers(query,kind);
-  watchButtons();
-</script>
-
-  </body>
-
-</html>
