--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,90 +2,112 @@
 <html>
   <head>
     <title>Joysound</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="<%= url "/site.js" %>"></script>
         <link rel="stylesheet" type="text/css" href="/bootstrap.min.css">
-<style type="text/css">
-        tr.even td,tr:nth-child(even) {background:#e5ecf9;}
-        table{width:100%;}
-        tr {width: 100%;}
-        td {width: 20%;}
-
-        #title {
-          width:70%;
-          float:left;
-        }
-
-        #user {
-          text-align: right;
-          width: 25%;
-          float:right;
-        }
-
-        #main {
-          clear:both;
-        }
-        #message {
-          display: none;
-        }
-
-</style>
   </head>
 
   <body>
-    <div class="row-fluid">
-      <div class="span10 offset1">
-        
-      <div id="title">
-        <h1>Joysound-Suche</h1 >
-      </div>
-      <div id="user">
-      <% if logged_in? %>
-        <h4><%=  current_user.email%></h4>
-        <form method="post" action="<%= url '/user/logout' %>">
-          <button>Abmelden</button>
-        </form>
-      <% else %>
-       <p>
-          <a href='<%= url "/user/new" %>'>Anmelden</a>
-        </p>
-      <% end %>
-      </div>
-      <div id="main">
-        <form onsubmit="return osterhase(this)" action="<%= url '/' %>" method="get">
-          <div class="input-append">
-          <select name="kind" class="span1">
-            <option value="title">Titel</option>
-            <option value="artist" <%= "selected='1'" if params[:kind] == "artist" %>>Künstler</option>
-          </select>
-          <input  class="span2" id="query" name="query" value="<%= params[:query] %>"/>
+    
 
-          <button class="btn btn-primary">Suchen!</button>
-          </div>
-        </form>
-        <div class="row-fluid">
-        <% @genre_list = [["J-POP", "男"], ["アニメ", "冒険アニメ", "ギャグ・コメディ南国少年パプワくん", "ファミリーアニメ", "魔法・ファンタジー夢のクレヨン王国"], ["演歌", "男", "女"], ["CM", "通信・携帯電話J-POP", "グループおさわり探偵なめこ栽培キット"], ["洋楽", "グループ"], ["童謡・唱歌・合唱・他", "民謡"]] %>
-        <% @genre_list.each do |all_genre|%>
-          <div class="span3"> 
-            <% main_genre = all_genre[0]%>
-            <p class="MainGenre">
-            <% link = "/search/#{CGI::escape(main_genre)}"%>
-            <a href="<%= url link%>"><%= main_genre %></a>
-            </p>
-            <ul>
-              <% 1.upto(all_genre.length - 1).each do |num|%>
-                <% link = "search/#{CGI::escape(main_genre + "/" + all_genre[num])}" %>
-                <li class="SubGenre">
-                <a href="<%= url link%>"><%= all_genre[num] %></a>
+      <div class="navbar navbar-inverse navbar-fixed-top">    
+        <div class="navbar-inner">
+          <div class="container">
+
+             <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+             </a>                                                    
+             <!-- Be sure to leave the brand out there if you want it shown -->
+             <a class="brand" href="#">Joysound-Suche</a>                                                                
+
+            
+              <form onsubmit="return osterhase(this)" action="<%= url '/' %>" class="nav-form pull-left form-inline" method="get" style="margin:10px">
+                 <select name="kind" class="span2 inline">
+                    <option value="title">Titel</option>
+                    <option value="artist" <%= "selected='1'" if params[:kind] == "artist" %>>Künstler</option>
+                 </select>
+                  <div class="input-append">
+                      <input  style="height:24px"  id="query" name="query" value="<%= params[:query] %>"/>
+                      <button class="btn btn-primary" type="submit">Suchen!</button>
+                  </div>
+              </form>
+
+            <div class="nav-collapse">
+              <ul class="nav pull-right">
+                <% if logged_in? %>
+                  <li><a href="#"><%=  current_user.email%></a></li>
+
+                <li>
+                  <form method="post" action="<%= url '/user/logout' %>">
+                    <button class="btn">Abmelden</button>
+                  </form>
                 </li>
-              <% end %>
-            </ul>
+                <% else %>
+                <li><a class="btn" href='<%= url "/user/new" %>'>Anmelden</a></li>
+              </ul>
+                <% end %>
+
+            </div>
+
           </div>
-        <% end %>
-       </div>
-        <%= yield %>
+        </div>
       </div>
-  
+
+    <header class="hero-unit">
+      <div class="container">
+        <h1>Joysound-Suche</h1>
+      </div>
+    </header>
+
+        <% @genre_list = [["J-POP", "男", "女", "グループ"], ["アニメ", "スポーツ・レース", "学園", "ヒーロー・ヒロイン", "ロボット", "ファミリー", "冒険", "怪盗・探偵・刑事", "SF", "特撮・戦隊", "動物・虫等", "映画", "ギャグ・コメディ", "魔法・ファンタジー", "ゲーム", "その他"], ["洋楽", "男", "女", "グループ"], ["映画・ミュージカル", "洋画", "邦画", "アジア", "アニメ", "ミュージカル"], ["CLUB・DANCE", "CLUB・TRANCE・TECHNO", "R&B・HIP HOP", "REGGAE", "ユーロビート"], ["TV・ラジオ", "ドラマ", "ニュース・教養・ドキュメント", "音楽・バラエティ", "ラジオ"], ["CM", "飲料・酒類", "車・バイク", "食品・菓子", "金融・保険", "美容・薬品・生活用品", "住居・不動産・引越し", "家電・デジタル機器", "スポーツ・アミューズメント", "交通機関・旅行", "教育・マスコミ", "通信・携帯電話", "お店", "その他"], ["スポーツ・応援歌", "野球", "サッカー", "プロレス", "格闘技(K-1・プライド・他)", "モータースポーツ・競馬", "その他"], ["JAZZ・クラシック・インスト", "JAZZ", "クラシック", "イージーリスニング", "フュージョン"], ["童謡・唱歌・合唱・他", "童謡", "唱歌", "合唱", "ちびっこ", "民謡", "軍歌等"], ["演歌", "男", "女", "グループ"], ["ワールド", "アジア", "ラテン", "外国民謡", "その他", "国歌"], ["アレンジ・リミックス・他", "オルゴール", "アレンジ・リミックス", "ポケメロオリジナルアレンジ", "メドレー"], ["イベント", "ウェディング", "X'mas", "卒業"], ["効果音・Voice", "Voice", "効果音"], ["VOCALOID", "初音ミク", "GUMI", "鏡音リン", "鏡音レン", "巡音ルカ", "神威がくぽ", "KAITO", "MEIKO", "氷山キヨテル", "Lily", "歌愛ユキ", "開発コード miki", "猫村いろは", "弱音ハク", "亞北ネル", "初音ミクオ", "アイスマウンテン", "IA", "結月ゆかり", "CUL", "VY1", "VY2", "蒼姫ラピス", "その他"]] %>
+    <div class="container-fluid">
+      <div class="row-fluid">
+
+        <ul class="nav nav-list affix span2 ">
+        <% @genre_list.each do |all_genre|%>
+              <% main_genre = all_genre[0]%>
+              <% link = "/search/#{CGI::escape(main_genre)}"%>
+              <li><a href="<%= url link%>"><strong><%= main_genre %></strong></a></li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+
+        <% @genre_list.each do |all_genre|%>
+        <div class="span3">
+              <% main_genre = all_genre[0]%>
+              <% link = "/search/#{CGI::escape(main_genre)}"%>
+              <table>
+                <tr style="float:left">
+                  <th><a href="<%= url link%>"><small><%= main_genre %></small></a></th>
+                </tr>
+                
+                <tr>
+                  <td>
+                  <% 1.upto(all_genre.length - 1).each do |num|%>
+                  <% link = "search/#{CGI::escape(main_genre + "/" + all_genre[num])}" %>
+                  <a href="<%= url link%>"><small><%= all_genre[num] %></small></a> &nbsp;
+                  <% end %>
+                  </td>
+                </tr>
+
+              </table>
+        </div>
+        <% end %>
+
+      </div>
+
+      <div class="row">
+        <div>
+          <%= yield %>
+        </div>
+
       </div>
     </div>
   </body>
