--- a/views/remembered.erb
+++ b/views/remembered.erb
@@ -2,7 +2,7 @@
 <% if @remembered and not @remembered.empty? then %>
   <h2>Gemerkte Songs</h2>
   <h3><a href='<%= url "/song/txt" %>'>Als Textdatei herunterladen</a></h3>
-  <table>
+  <table class="table table-striped">
   <tr>
     <td>Title</td>
     <td>Artist</td>
