fix anmelden button

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,7 +46,7 @@
                   </form>
                 </li>
                 <% else %>
-                <li><a class="btn" href='<%= url "/user/new" %>'>Anmelden</a></li>
+                  <li><button class="btn"><a href='<%= url "/user/new" %>'>Anmelden</a></button></li>
               </ul>
                 <% end %>
 
