--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,8 @@
         <% if @results %>
           <%= erb :results %>
         <% end %>
+        <% if @results.length == 0 %>
+        <% end %>
       </div>
       <div id="remembered">
         <% if @remembered%>
